--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -6,25 +6,23 @@
     "id": "whiS8A4lblMy"
    },
    "source": [
-    "# Problem 2 - Transformers for Language Modeling and Sentiment Analysis\n",
+    "# Transformers for Language Modeling and Sentiment Analysis\n",
     "\n",
-    "In this problem we will learn how to implement the building blocks for \"Transformer\" models, and then implement a pre-training procedure for such models via [BERT](https://arxiv.org/abs/1810.04805)-style language modeling and then fine-tune a pre-trained model on sentiment analysis tasks on the IMDB movie review dataset.\n",
+    "Implement the building blocks for \"Transformer\" models, and then implement a pre-training procedure for such models via [BERT](https://arxiv.org/abs/1810.04805)-style language modeling and then fine-tune a pre-trained model on sentiment analysis tasks on the IMDB movie review dataset.\n",
     "Typically, transformer models are very large and are pre-trained on language modeling tasks with massive datasets with huge computational resources.\n",
-    "As such, we will only implement the pre-training *procedure*, without expecting you to pre-train a model to completion.\n",
-    "We will then load in a pre-trained model for you to perform fine-tuning on a sentiment analysis task.\n",
+    "As such, we will only implement the pre-training *procedure*, without expecting to pre-train a model to completion here.\n",
+    "Then, load in a pre-trained model to perform fine-tuning on a sentiment analysis task.\n",
     "\n",
-    "We will complete the following steps in this problem:\n",
+    "Contain the following steps:\n",
     "1. Implement a multi-head-attention (MHA) layer.\n",
     "1. Implement \"Transformer block\" layers which use MHA layers, linear layers, and residual connections.\n",
     "1. Implement a full Transformer model comprised of Transformer blocks.\n",
     "1. Implement [BERT](https://arxiv.org/abs/1810.04805)-style language model pre-training for the Transformer model.\n",
     "1. Fine-tune our trained language model on a sentiment analysis task.\n",
     "\n",
-    "We highly recommend using google colab for this problem. But feel free to set up your own environment to run on your local machine.\n",
+    "Highly recommend using google colab. But feel free to set up your own environment to run on your local machine.\n",
     "\n",
-    "In order to run on GPU in Colab go to `Runtime -> Change runtime type` and select `T4 GPU` under the `Hardware accelerator`.\n",
-    "\n",
-    "If you have any questions, please come to Zizhao's office hours."
+    "In order to run on GPU in Colab go to `Runtime -> Change runtime type` and select `T4 GPU` under the `Hardware accelerator`."
    ]
   },
   {
@@ -60,7 +58,7 @@
     "id": "DeYN4z2V-_F2"
    },
    "source": [
-    "# 1 - Scaled Dot Product Attention [7 points]\n",
+    "# 1 - Scaled Dot Product Attention\n",
     "The attention mechanism describes a recent new group of layers in neural networks that has attracted a lot of interest in the past few years, especially in sequence tasks. Here we use the following definition: *the attention mechanism describes a weighted average of (sequence) elements with the weights dynamically computed based on an input query and elements’ keys.* In other words, we want to dynamically decide on which inputs we want to “attend” more than others based on their values. In particular, an attention mechanism has usually **4 parts** we need to specify:\n",
     "\n",
     "\n",
@@ -141,7 +139,7 @@
     "id": "yTQd7kt6DA48"
    },
    "source": [
-    "Before you continue, run the test code listed below. It will generate random queries, keys, and value vectors, and calculate the attention outputs. Make sure you can follow the calculation of the specific values here, and also check it by hand."
+    "Before you continue, run the test code listed below. It will generate random queries, keys, and value vectors, and calculate the attention outputs. "
    ]
   },
   {
@@ -174,9 +172,9 @@
     "id": "LrdVJlTd64Uw"
    },
    "source": [
-    "# 2 - Build Multi-Head-Attention Layer [8 points]\n",
+    "# 2 - Build Multi-Head-Attention Layer\n",
     "\n",
-    "Now we will implement multi-head-attention, first introduced by [Attention is All you Need (Vaswani et al. 2017)](https://arxiv.org/abs/1706.03762).\n",
+    "Implement multi-head-attention, first introduced by [Attention is All you Need (Vaswani et al. 2017)](https://arxiv.org/abs/1706.03762).\n",
     "The scaled dot product attention allows a network to attend over a sequence. However, often there are multiple different aspects a sequence element wants to attend to, and a single weighted average is not a good option for it. This is why we extend the attention mechanisms to multiple heads, i.e. multiple different query-key-value triplets on the same features.\n",
     "<!-- \"Attention\" is a computational mechanism which allows models to selectively weight different tokens in other parts of the input. -->\n",
     "<!-- For example, given the sentence, \"John went to the dentist to get his teeth cleaned.\" the model might learn to use the \"his\" token to attend to the \"John\" token, as the word \"his\" is referring to \"John\" in this context. -->\n",
@@ -292,7 +290,7 @@
     "id": "XMiKHd8Leo8r"
    },
    "source": [
-    "Let's check that your MHA layer works and returns a tensor of the correct shape"
+    "Check MHA layer works and returns a tensor of the correct shape"
    ]
   },
   {
@@ -324,7 +322,7 @@
     "id": "UsZmxmA8760j"
    },
    "source": [
-    "# 3 - Build Transformer Blocks [7 points]\n",
+    "# 3 - Build Transformer Blocks\n",
     "\n",
     "Now we construct the blocks from which transformer models are comprised of.\n",
     "\n",
@@ -348,7 +346,6 @@
     "1.   Residual connection to 4  (add the output of 4 to 8)\n",
     "1.   Layer Norm\n",
     "\n",
-    "According to the listed modules, please implement:\n",
     "\n",
     "```\n",
     "class TransformerBlock(nn.Module)\n",
@@ -429,7 +426,7 @@
     "id": "mUeAV4qSUnJu"
    },
    "source": [
-    "Let's once again check that the code runs without error and outputs the correct shape (note, this is not a guarantee that you have implemented it correctly)."
+    "Check that the code runs without error and outputs the correct shape (no guarantee)"
    ]
   },
   {
@@ -462,7 +459,7 @@
     "id": "BHBvnmRL76qa"
    },
    "source": [
-    "# 4 - Position Encoding [0 points]\n",
+    "# 4 - Position Encoding\n",
     "\n",
     "In tasks like language understanding, the position is important for interpreting the input words. The position information can therefore be added via the input features. We could learn a embedding for every possible position, but this would not generalize to a dynamical input sequence length. Hence, the better option is to use feature patterns that the network can identify from the features and potentially generalize to larger sequences.\n",
     "Mathmatically:\n",
@@ -513,7 +510,7 @@
     "id": "g9HAPz85gEGc"
    },
    "source": [
-    "# 5 - Build a BERT model [7 points]\n",
+    "# 5 - Build a BERT model\n",
     " A BERT model consists of:\n",
     "\n",
     "1.   **An input embedding layer.** This converts a token index into a vector embedding. Make sure to include an extra embedding for the masked tokens! In other words, learn vocab_size + 1 embeddings.\n",
@@ -596,7 +593,7 @@
    },
    "source": [
     "\n",
-    "# 6 - Implement BERT Pre-Training [8 points]\n",
+    "# 6 - Implement BERT Pre-Training\n",
     "\n",
     "In order to pre-train our language model, we randomly permute `mask_rate`% of the tokens and attempt to predict the original tokens.\n",
     "The permutation is as follows:\n",
@@ -697,7 +694,7 @@
     "id": "Ke6au928duGd"
    },
    "source": [
-    "# 7 - Fine-Tune Pre-Trained Model on Sentiment Analysis [10 points]\n",
+    "# 7 - Fine-Tune Pre-Trained Model on Sentiment Analysis\n",
     "\n",
     "In the previous section we implemented the pre-training procedure specified in the [BERT paper](https://arxiv.org/abs/1810.04805).\n",
     "Now, we will take a fully-trained BERT model and use its learned representations for performing a sentiment analysis task.\n",
@@ -1190,88 +1187,6 @@
     "print(predict_sentiment(model, tokenizer, \"This film is terrible\"))\n",
     "print(predict_sentiment(model, tokenizer, \"This film is great\"))"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "oO386sdx0hRN"
-   },
-   "source": [
-    "## Conceptual Questions\n",
-    "\n",
-    "\n",
-    "1.   Why is the residual connection is crucial in the Transformer architecture? [1 points]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "ehAspJSouCVg"
-   },
-   "source": [
-    "[Answer here]\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "jbDAQO7gr6-H"
-   },
-   "source": [
-    "2.   Why is Layer Normalization important in the Transformer architecture? [1 points]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "yo_PHwuLuEz0"
-   },
-   "source": [
-    "[Answer here]\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "7M79qzbksBfb"
-   },
-   "source": [
-    "3.  Why do we use the scaling factor of $1/\\sqrt{d_k}$ in Scaled Dot Product Attention? If we remove it, what is going to happen? [1 points]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "xdXaGvTquFWJ"
-   },
-   "source": [
-    "[Answer here]\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "ytPPsGz2vBx0"
-   },
-   "source": [
-    "# Submission\n",
-    "\n",
-    "Please prepare a separate file for each problem. For this problem, please submit a single .ipynb file containing all generated solutions. If you are using google colab, go to Download -> Download .ipynb\n",
-    "\n",
-    "Make sure that you have:\n",
-    "1. Section Inference: some short, one-sentence movie reviews that you wrote yourself, with your model's predicted sentiment.\n",
-    "2. Section Conceptual Questions: Answers to the conceptual questions.\n",
-    "3. Other sections: all running logs and printed results.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "TBWI3TaBucsX"
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
